# redsoft-test-task

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/application/common/: dto.py  filter.py  uow.py  usecase.py
src/application/exceptions/: repo.py  services.py
src/application/exclusion_poll/: repo.py
src/application/exclusion_poll/exclusion_poll_create/: dto.py  usecase.py
src/application/exclusion_poll/exclusion_poll_update/: dto.py  usecase.py
src/application/friend/: repo.py
src/application/friend/friend_create/: dto.py  usecase.py
src/application/house/: repo.py
src/application/house/house_create/: dto.py  usecase.py
src/application/house/house_delete/: usecase.py
src/application/house/house_get/: usecase.py
src/application/house/house_get_list/: dto.py  usecase.py
src/application/house/house_update/: dto.py  usecase.py
src/application/message/: repo.py
src/application/message/message_create/: dto.py  (+1 more)
src/application/services/: check_user_can_send_message.py  check_users_move_in.py
src/application/user/: repo.py
src/domain/common/: entities.py  exceptions.py
src/domain/exclusion_poll/: entity.py
src/domain/friend/: entity.py
src/domain/house/: entity.py
src/domain/message/: entity.py
src/domain/user/: entity.py
src/infrastructure/database/: models.py  sqlalchemy_uow.py
src/presentation/: exceptions.py
src/presentation/api/: __main__.py  api_application.py  dependencies.py  setup.py
tests/unit/application/: test_mutators.py
tests/unit/domain/: test_house.py
(+20 files in other folders)
